# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gen_diff.py  gendiff.py  io.py  main.py
gendiff/render/: json_renderer.py  nested_renderer.py  nested_text.py  plain_renderer.py
gendiff/tests/: test_diff_generator.py  test_io.py  test_renderers.py
gendiff/tests/fixtures/: json_text  test_yaml.yaml
