[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["mkaraev <maruf.karaev97@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
