[tool.poetry]
name = "gendiff"
version = "1.0.0"
description = ""
authors = ["mkaraev <maruf.karaev97@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
